some more keybindings adjustments

--- a/config
+++ b/config
@@ -45,18 +45,21 @@ bindsym $mod+d exec dmenu_run
 # swap mode
 bindsym $mod+button1 mark --toggle m
 bindsym $mod+x mark --toggle m
+bindsym $mod+m mark --toggle m
 bindsym $mod+s swap container with mark m
 bindsym $mod+Shift+s move container to mark m
 
 # output focus
 bindsym $mod+Ctrl+Left focus output left
 bindsym $mod+Ctrl+Right focus output right
+bindsym $mod+Ctrl+Shift+Left move container to output left, focus output left
+bindsym $mod+Ctrl+Shift+Right move container to output right, focus output right
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+m focus right
+#bindsym $mod+j focus left
+#bindsym $mod+k focus down
+#bindsym $mod+l focus up
+#bindsym $mod+m focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -65,10 +68,10 @@ bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+M move right
+#bindsym $mod+Shift+j move left
+#bindsym $mod+Shift+k move down
+#bindsym $mod+Shift+l move up
+#bindsym $mod+Shift+M move right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
