--- a/config
+++ b/config
@@ -47,7 +47,7 @@ bindsym $mod+button1 mark --toggle m
 bindsym $mod+x mark --toggle m
 bindsym $mod+m mark --toggle m
 bindsym $mod+s swap container with mark m
-bindsym $mod+Shift+s move container to mark m
+bindsym $mod+Shift+s exec /home/rkj/.config/i3/monitor_swap
 
 # output focus
 bindsym $mod+Ctrl+Left focus output left
@@ -198,6 +198,10 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 bar {
     status_command i3status
+    tray_output primary
+    colors {
+        background #000000
+    }
 }
 
 # Pulse Audio controls
