--- a/config
+++ b/config
@@ -142,6 +142,18 @@ bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+ccedilla move container to workspace $ws9
 bindsym $mod+Shift+agrave move container to workspace $ws10
 
+# rename workspace
+bindsym $mod+Ctrl+Shift+1 exec ~/.config/i3/workspace_swap $ws1
+bindsym $mod+Ctrl+Shift+eacute exec ~/.config/i3/workspace_swap $ws2
+bindsym $mod+Ctrl+Shift+3 exec ~/.config/i3/workspace_swap $ws3
+bindsym $mod+Ctrl+Shift+4 exec ~/.config/i3/workspace_swap $ws4
+bindsym $mod+Ctrl+Shift+5 exec ~/.config/i3/workspace_swap $ws5
+bindsym $mod+Ctrl+Shift+6 exec ~/.config/i3/workspace_swap $ws6
+bindsym $mod+Ctrl+Shift+egrave exec ~/.config/i3/workspace_swap $ws7
+bindsym $mod+Ctrl+Shift+8 exec ~/.config/i3/workspace_swap $ws8
+bindsym $mod+Ctrl+Shift+ccedilla exec ~/.config/i3/workspace_swap $ws9
+bindsym $mod+Ctrl+Shift+0 exec ~/.config/i3/workspace_swap $ws10
+
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
@@ -197,11 +209,9 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-    status_command i3status
+    status_command exec ~/.config/i3/bars/barista
+    font pango:DejaVu Sans Mono 12
     tray_output primary
-    colors {
-        background #000000
-    }
 }
 
 # Pulse Audio controls
@@ -225,6 +235,8 @@ bindsym XF86Display exec /home/rkj/.screenlayout/auto
 exec transmission-gtk -m
 exec blueman-applet
 exec pnmixer
+exec xfce4-clipman
+exec thunderbird
 
 # autostart script
 exec /home/rkj/.config/i3/autostart
