--- a/config
+++ b/config
@@ -17,7 +17,13 @@ set $mod Mod4
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango:DejaVu Sans Mono 15
+#font pango:DejaVu Sans 14
+font pango:DejaVu Sans Mono 14
+#font pango:Font Awesome 5 Free Solid 14
+
+
+
+#font pango:Font Awesome 5 Free 15
 
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -107,16 +113,19 @@ bindsym $mod+a focus parent
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
-set $ws5 "5"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
-set $ws10 "10"
+set $ws1 "1:1 "
+set $ws2 "2:2 "
+set $ws3 "3:3 "
+set $ws4 "4:4 "
+set $ws5 "5:5 "
+set $ws6 "6:6 "
+set $ws7 "7:7 "
+set $ws8 "8:8 "
+set $ws9 "9:9 "
+set $ws10 "10:10 "
+
+assign [class="Thunderbird"] $ws5
+assign [class="Deadbeef"] $ws9
 
 # switch to workspace
 bindsym $mod+ampersand workspace $ws1
@@ -158,11 +167,6 @@ bindsym $mod+Ctrl+Shift+0 exec ~/.config/i3/workspace_swap $ws10
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
-
-# exit i3 (logs you out of your X session)
-#bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'Logout?' -b 'Yes' 'i3-msg exit'"
-#bindsym $mod+Shift+colon exec "i3-nagbar -t error -m 'Reboot?' -b 'Yes' 'systemctl reboot'"
-#bindsym $mod+Shift+exclam exec "i3-nagbar -t error -m 'Poweroff?' -b 'Yes' 'systemctl poweroff'"
 
 # exit i3 alt
 bindsym $mod+exclam mode "$mode_system"
@@ -206,12 +210,31 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
+# theme
+set $bg             #0f141f
+set $inactive-bg    #2f343f
+set $text           #f3f4f5
+set $inactive-text  #676e7d
+set $urgent-bg      #e53935
+
+client.focused            $bg          $bg          $text          #00ff00
+client.unfocused          $inactive-bg $inactive-bg $inactive-text #00ff00
+client.focused_inactive   $inactive-bg $inactive-bg $inactive-text #00ff00
+client.urgent             $urgent-bg   $urgent-bg   $text-color    #00ff00
+
 bar {
     status_command exec ~/.config/i3/bars/barista
-    font pango:DejaVu Sans Mono 12
+    #font pango:DejaVu Sans Mono 12
+    font pango:Font Awesome 5 Free Solid 14
     tray_output primary
+    position bottom
+    strip_workspace_numbers yes
+
+    colors {
+      focused_workspace  $bg          $bg          $text          #00ff00
+      inactive_workspace $inactive-bg $inactive-bg $inactive-text #00ff00
+      urgent_workspace   $urgent-bg   $urgent-bg   $text-color    #00ff00
+    }
 }
 
 # Pulse Audio controls
@@ -236,7 +259,14 @@ exec transmission-gtk -m
 exec blueman-applet
 exec pnmixer
 exec xfce4-clipman
-exec thunderbird
+exec "goland; i3-msg move container to workspace number 1"
+exec "x-www-terminal; i3-msg move container to workspace number 1"
+exec "x-www-terminal; i3-msg move container to workspace number 2"
+exec "chromium; i3-msg move container to workspace number 3"
+exec "chromium https://www.tradingview.com/chart/afobgFqh/; i3-msg move container to workspace number 4"
+exec "thunderbird; i3-msg move container to workspace number 5"
+exec "x-www-browser https://www.youtube.com/; i3-msg move container to workspace number 9"
+exec "x-www-terminal -x htop; i3-msg move container to workspace number 0"
 
 # autostart script
 exec /home/rkj/.config/i3/autostart
@@ -244,6 +274,7 @@ exec /home/rkj/.config/i3/autostart
 # mouse stuff
 bindsym button2 kill
 bindsym button3 floating toggle
+bindsym $mod+button3 sticky toggle, mark --toggle s
 
 # floaters
 #for_window [class="Pavucontrol"] floating enable, move position 0 0
