--- a/config
+++ b/config
@@ -41,6 +41,9 @@ bindsym $mod+Return exec i3-sensible-terminal
 # start file manager
 bindsym $mod+e exec thunar
 
+# restart ibus (hotfixes java jetbrains bug)
+bindsym $mod+i exec ibus restart
+
 # kill focused window
 bindsym $mod+Q kill
 
@@ -125,8 +128,8 @@ set $ws3 "3:3 "
 set $ws4 "4:4 "
 set $ws5 "5:5 "
 set $ws6 "6:6 "
-set $ws7 "7:7 "
-set $ws8 "8:8 "
+set $ws7 "7:7 "
+set $ws8 "8:8 "
 set $ws9 "9:9 "
 set $ws10 "10:10 "
 
